# fixed-point

./: Cargo.toml  README.md
src/: error.rs  fixed_point.rs  integers.rs  lib.rs  macros.rs  q64.rs  utils.rs
