[package]
name = "fixed-point"
version = "0.1.0"
edition = "2021"
authors = ["Levi Bland <levi@arcane.fi>"]
license = "Apache-2.0"

[features]
bytemuck = ["dep:bytemuck"]
serde = ["dep:serde"]

[dependencies]
uint = { git = "https://github.com/arcane-fi/parity-common", package = "uint" }
bytemuck = { version = "^1.0", optional = true }
serde = { version = "^1.0", optional = true }