[package]
name = "fixed-point"
version = "0.1.0"
edition = "2021"
authors = ["Levi Bland <levi@arcane.fi>"]
license = "Apache-2.0"

[features]
bytemuck = ["dep:bytemuck"]
serde = ["dep:serde"]
anchor = ["dep:anchor-lang", "dep:borsh"]
idl-build = ["dep:anchor-lang", "anchor-lang/idl-build"]

[dependencies]
uint = { git = "https://github.com/arcane-fi/parity-common", package = "uint" }
bytemuck = { version = "^1.0", optional = true }
serde = { version = "^1.0", optional = true }
anchor-lang = { version = "0.31.1", optional = true }
borsh = { version = "1.0", features = ["derive"], optional = true }